# vgg-burn

./: .gitignore  Cargo.toml  README.md  download_vgg_16_19_weights.py
src/: lib.rs  relu.rs
src/model/: classifier.rs  features.rs  layer.rs  mod.rs  vgg_features_only.rs  weights.rs  weights_loader.rs
